# git-example

./: git.css  index.html
2024CPL/: CMakeLists.txt
2024CPL/1-types-variable/: CMakeLists.txt  admin.c  circle.c  mol.c  sphere.c
2024CPL/10-function-pointers/: CMakeLists.txt  bsearch-gnuc.c  integration.c  sort.c
2024CPL/11-struct/: CMakeLists.txt  musician.c  offset.c
2024CPL/12-linkedlist/: CMakeLists.txt  josephus2.c
2024CPL/12-linkedlist/ll/: CMakeLists.txt  ll.c  ll.h
2024CPL/2-if-for-array/: CMakeLists.txt  ascii.c  change.c  clock.c  equation.c  gas.c  julian.c  leap.c  min-array.c  min-of-asetof-numbers.c  min-of-two.c  pi-2.c  self-power.c  sensor.c
2024CPL/2024BoCS/: CMakeLists.txt
2024CPL/2024BoCS/W1/: CMakeLists.txt  decimal-to-binary.c  echo-character.c  state-graph.c  toupper-echo-character.c
2024CPL/3-for-a-while/: CMakeLists.txt  b-ternary-1.c  b-ternary-2.c  balckhole.c  binary-search.c  bubble-sort.c  calendar.c  converter-1.c  digits-do-while.c  digits-while.c  factorial.c  flip.c  gcd.c  josephus.c  palindrome-1.c  primes.c  selection-sort.c  single.c  standup.c  triangle.c
2024CPL/4-loop/: Bye-JonaBell.c  CMakeLists.txt  behaviours.c  bit.c  game-of-life.c  guess-the-number.c  insertion-sort.c  magic-square.c  match.c  matric-mult.c  merge.c  mines-1.c  sudoku.c  tictactoe.c  two-dimensional-array.c
2024CPL/5-function/: CMakeLists.txt  absolute-prime.c  binary-search2.c  converter2.c  leap2.c  next-permutation.c  pair.c  palindrome2.c  primes2.c  radix.c  selection-sort2.c  stars.c  sum.c
2024CPL/7-pointers-and-arrays/: BigTitle.c  CMakeLists.txt  bucket.c  buddy.c  counting.c  example.c  interpreter.c  mines-2.c  pife.c  substr.c  wine.c
2024CPL/8-printers-and-strings/: CMakeLists.txt  strcmp.c  strcpy.c  strs_cat.c
2024CPL/9-double-pointers/: CMakeLists.txt  bsearch.c  fifa.c  polynlist.c  scores.c  selection-sort-strings.c  split-sort.c
2024CPL/TRYOUT/: CMakeLists.txt  assignment_structure.c  guess.c  hello.c  if.c  review.c  while.c
2024CPL/notebook/: 10-function-pointers.md  8-pointer-c-strings.md  9-double-pointers.md  function.md  pointers-and-array.md
