cmake_minimum_required(VERSION 3.29)
project(2024CPL C)

set(CMAKE_C_STANDARD 17)
#template code


add_subdirectory(TRYOUT)
add_subdirectory(1-types-variable)
add_subdirectory(2-if-for-array)
add_subdirectory(3-for-a-while)
add_subdirectory(4-loop)
add_subdirectory(2024BoCS)
add_subdirectory(5-function)
add_subdirectory(7-pointers-and-arrays)
add_subdirectory(8-printers-and-strings)
add_subdirectory(9-double-pointers)
add_subdirectory(10-function-pointers)
add_subdirectory(11-struct)
add_subdirectory(12-linkedlist)
add_subdirectory(project0)