add_executable(leap leap.c)
add_executable(min-array min-of-two.c)
add_executable(min-of-asetof-numbers min-of-asetof-numbers.c)
add_executable(ASCII ASCII.c)
add_executable(change change.c)
add_executable(pi-2 pi-2.c)
add_executable(sensor sensor.c)
add_executable(julian julian.c)
add_executable(gas gas.c)
add_executable(equation equation.c)
add_executable(clock clock.c)
add_executable(self-power self-power.c)
