add_executable(primes primes.c)
add_executable(triangle triangle.c)
add_executable(single single.c)
add_executable(binary-search binary-search.c)
add_executable(digits-while digits-while.c)
add_executable(digits-do-while digits-do-while.c)
add_executable(selection-sort selection-sort.c)
add_executable(factorial factorial.c)
add_executable(converter-1 converter-1.c)
add_executable(blackhole balckhole.c)
add_executable(standup standup.c)
add_executable(gcd gcd.c)
add_executable(calendar calendar.c)
add_executable(palindrome palindrome-1.c)
add_executable(flip flip.c)
add_executable(josephus josephus.c)
add_executable(bubble-sort bubble-sort.c)
add_executable(b-ternary-1 b-ternary-1.c)
add_executable(b-ternary-2 b-ternary-2.c)
