add_executable(bit bit.c)
add_executable(behaviours behaviours.c)
add_executable(matrix-mult matric-mult.c)
add_executable(game-of-life game-of-life.c)
add_executable(guess-the-number guess-the-number.c)
add_executable(sudoku sudoku.c)
add_executable(mines-1 mines-1.c)
add_executable(magic-square magic-square.c)
add_executable(match match.c)
add_executable(merge merge.c)
add_executable(insertion-sort insertion-sort.c)
add_executable(tictactoe tictactoe.c)
add_executable(Bye-JonaBell Bye-JonaBell.c)
