add_executable(leap2 leap2.c)
add_executable(primes2 primes2.c)
add_executable(stars stars.c)
add_executable(binary-search2 binary-search2.c)
add_executable(palindrome2 palindrome2.c)
add_executable(sum sum.c)
add_executable(next-permutation next-permutation.c)
add_executable(absolute-prime absolute-prime.c)
add_executable(converter2 converter2.c)
add_executable(radix radix.c)
add_executable(pair pair.c)
add_executable(selection-sort2 selection-sort2.c)
