add_executable(wine wine.c)
add_executable(example example.c)
add_executable(bucket bucket.c)
add_executable(counting counting.c)
add_executable(buddy buddy.c)
add_executable(mines-2 mines-2.c)
add_executable(interpreter interpreter.c)
add_executable(BigTitle BigTitle.c)
add_executable(substr substr.c)
add_executable(pife pife.c)
